<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".story.detailstory.DetailStoryActivity">

    <TextView
        android:id="@+id/tv_createdAt"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/free_sans"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/createdAt" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="351dp"
        android:layout_height="91dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/back"
        android:ellipsize="end"
        android:fontFamily="@font/free_sans"
        android:maxLines="5"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="36dp"
        android:ellipsize="end"
        android:fontFamily="@font/free_sans_bold"
        android:maxLines="5"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_description"
        app:layout_constraintEnd_toEndOf="@+id/img_uploaded"
        app:layout_constraintStart_toStartOf="@+id/img_uploaded"
        tools:text="@string/name" />

    <ImageView
        android:id="@+id/img_uploaded"
        android:layout_width="227dp"
        android:layout_height="227dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:src="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/free_sans_bold"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/shareButton"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_createdAt"
        app:layout_constraintStart_toStartOf="@+id/tv_createdAt"
        app:layout_constraintTop_toBottomOf="@+id/tv_createdAt"
        tools:ignore="ContentDescription,UnusedAttribute,TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>