<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="406dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_createdAt"
            android:layout_width="344dp"
            android:layout_height="46dp"
            android:layout_marginTop="76dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/free_sans"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_name"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/createdAt" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="345dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/back"
            android:ellipsize="end"
            android:fontFamily="@font/free_sans"
            android:maxLines="5"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_name"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            card_view:layout_constraintVertical_bias="0.148"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="162dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/free_sans_bold"
            android:maxLines="5"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_uploaded"
            card_view:layout_constraintVertical_bias="0.085"
            tools:text="@string/name" />

        <ImageView
            android:id="@+id/img_uploaded"
            android:layout_width="227dp"
            android:layout_height="227dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.466"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.009"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.498"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
